--- a/stylenava.css
+++ b/stylenava.css
@@ -62,11 +62,11 @@
 }
 
 .btn {
-    margin-bottom: 3%;
-    font-size: 1.5em;      
-    padding: 10px 20px;  
-    width: 90%;          
-    max-width: 220px;    
+    margin: 3%;
+    padding: 2%;
+    height: 5vh;
+    font-size: 2.3vh;
+    width: 20vh;
 }
 
 .carousel-inner img {
@@ -77,4 +77,3 @@
     margin: auto;
     display: block;
 }
-
